--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 authors = ["Alex Sayers <alex.sayers@gmail.com>"]
 
 [dependencies]
+byteorder = "1.1"
+fs2 = "0.4"
+log = "0.3"
+memmap = "0.5"
